# rust-teach

./: AGENTS.md  Cargo.toml  index.html  style.css
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/components/layout/: header.rs  sidebar.rs
src/components/ui/: code_block.rs  concept_card.rs  mod.rs
src/lessons/: collections.rs  control_flow.rs  enums.rs  error_handling.rs  functions.rs  hello.rs  intro.rs  mod.rs  ownership.rs  setup.rs  structs.rs  variables.rs
src/pages/: home.rs  lesson.rs  mod.rs
